# cone_detection

./: CMakeLists.txt  README.md  exit  package.xml  package.xml~
cfg/: calibration_cam.txt  ost.txt  ost.yaml  parameter.yaml
cmake/: CMakeLists.txt  package.xml
include/cone_detection/: car_model.hpp  gps_handler.hpp  grid_mapper.hpp  image_handler.hpp  laser_detection.hpp  tools.hpp  vision_detection.hpp
include/planning/: car_model.hpp  planner.hpp  pure_pursuit.hpp  tools.hpp
launch/: collecting_candidates.launch  cone_bag.launch  cone_bag.launch~  cone_bag_angle.launch  cone_bag_color.launch  cone_bag_color.launch~  cone_bag_combined.launch  cone_bag_other.launch~  cone_bag_slidingWindow.launch  cone_bag_slidingWindow.launch~  cone_detection.launch  cone_detection.launch~  cone_detection_color.launch~  cone_detection_combined.launch  laser_detection.launch  laser_detection.launch~  local_network_test.launch  train_convolutional.launch  train_convolutional.launch~  train_fullyconnected.launch  training.launch  transform_test.launch  transform_test.launch~
msg/: Label.msg  Path.msg
neural_net/: cone_eval.py  cone_eval_color.py  cone_eval_colornet.py  cone_eval_net.py  convolutional.py  data_handler.py  fully_connected.py  labeling  labeling.cpp  local_network_test.py  net.py  train.py
planning/: car_model.cpp  interface.cpp  main.cpp  planner.cpp  pure_pursuit.cpp  tools.cpp
src/: car_model.cpp  cone_eval.py  eval.py  gps_handler.cpp  grid_mapper.cpp  image_handler.cpp  laser_detection.cpp  main.cpp  tools.cpp
test/: CMakeLists.txt  angle_eval.py  color_eval.py  color_single_image.py  comparing.py  comparision.py  evaluation_graphs.py  lines_single_image.py  sliding_window.py  transformation.cpp
training/: convolutional.py
viewer/: ros_interface.py  viewer.py
